snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.7__src__extensions__linear__fstlinear.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.7/src/extensions/linear/fstlinear.cc",
    ),
    start_line: 1,
    end_line: 36,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "main",
            ),
            start_line: 20,
            end_line: 36,
            kind: Function,
            spaces: [],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 2,
                    closure_nargs: 0,
                    fn_nargs_sum: 2,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 2,
                    closure_nargs_min: 0,
                    fn_nargs_max: 2,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 1,
                    exit_sum: 1,
                    total_space_functions: 1,
                    exit_min: 1,
                    exit_max: 1,
                },
                cognitive: Stats {
                    structural: 1,
                    structural_sum: 1,
                    structural_min: 1,
                    structural_max: 1,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 2.0,
                    cyclomatic: 2.0,
                    n: 1,
                    cyclomatic_max: 2.0,
                    cyclomatic_min: 2.0,
                },
                halstead: Stats {
                    u_operators: 14,
                    operators: 50,
                    u_operands: 21,
                    operands: 30,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 19,
                        end: 35,
                        unit: false,
                        sloc_min: 17,
                        sloc_max: 17,
                    },
                    ploc: Ploc {
                        lines: {
                            32,
                            29,
                            26,
                            23,
                            35,
                            33,
                            27,
                            24,
                            21,
                            34,
                            31,
                            28,
                            22,
                            19,
                        },
                        ploc_min: 14,
                        ploc_max: 14,
                    },
                    cloc: Cloc {
                        only_comment_lines: 1,
                        code_comment_lines: 0,
                        comment_line_end: Some(
                            20,
                        ),
                        cloc_min: 1,
                        cloc_max: 1,
                    },
                    lloc: Lloc {
                        logical_lines: 8,
                        lloc_min: 8,
                        lloc_max: 8,
                    },
                    space_count: 1,
                    blank_min: 2,
                    blank_max: 2,
                },
                nom: Stats {
                    functions: 1,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 1,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 1,
                },
                mi: Stats {
                    halstead_length: 80.0,
                    halstead_vocabulary: 35.0,
                    halstead_volume: 410.3426413555973,
                    cyclomatic: 2.0,
                    sloc: 17.0,
                    comments_percentage: 0.058823529411764705,
                },
                abc: Stats {
                    assignments: 0.0,
                    assignments_sum: 0.0,
                    assignments_min: 0.0,
                    assignments_max: 0.0,
                    branches: 0.0,
                    branches_sum: 0.0,
                    branches_min: 0.0,
                    branches_max: 0.0,
                    conditions: 0.0,
                    conditions_sum: 0.0,
                    conditions_min: 0.0,
                    conditions_max: 0.0,
                    space_count: 1,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.0,
                    class_wmc: 0.0,
                    interface_wmc: 0.0,
                    class_wmc_sum: 0.0,
                    interface_wmc_sum: 0.0,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: false,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: false,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 2,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 2,
            closure_nargs_max: 0,
            total_functions: 1,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 1,
            total_space_functions: 1,
            exit_min: 0,
            exit_max: 1,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 1,
            structural_min: 0,
            structural_max: 1,
            nesting: 0,
            total_space_functions: 1,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 3.0,
            cyclomatic: 1.0,
            n: 2,
            cyclomatic_max: 2.0,
            cyclomatic_min: 1.0,
        },
        halstead: Stats {
            u_operators: 14,
            operators: 82,
            u_operands: 42,
            operands: 62,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 36,
                unit: true,
                sloc_min: 17,
                sloc_max: 17,
            },
            ploc: Ploc {
                lines: {
                    32,
                    29,
                    26,
                    23,
                    35,
                    17,
                    5,
                    34,
                    31,
                    28,
                    22,
                    19,
                    16,
                    13,
                    10,
                    7,
                    33,
                    27,
                    24,
                    21,
                    15,
                    12,
                    9,
                    3,
                },
                ploc_min: 14,
                ploc_max: 14,
            },
            cloc: Cloc {
                only_comment_lines: 3,
                code_comment_lines: 0,
                comment_line_end: Some(
                    1,
                ),
                cloc_min: 1,
                cloc_max: 1,
            },
            lloc: Lloc {
                logical_lines: 16,
                lloc_min: 8,
                lloc_max: 8,
            },
            space_count: 2,
            blank_min: 2,
            blank_max: 2,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 2,
        },
        mi: Stats {
            halstead_length: 144.0,
            halstead_vocabulary: 56.0,
            halstead_volume: 836.259108776295,
            cyclomatic: 3.0,
            sloc: 36.0,
            comments_percentage: 0.08333333333333333,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 2,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
