snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.7__src__extensions__linear__fstloglinearapply.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.7/src/extensions/linear/fstloglinearapply.cc",
    ),
    start_line: 1,
    end_line: 51,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "main",
            ),
            start_line: 14,
            end_line: 51,
            kind: Function,
            spaces: [],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 2,
                    closure_nargs: 0,
                    fn_nargs_sum: 2,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 2,
                    closure_nargs_min: 0,
                    fn_nargs_max: 2,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 5,
                    exit_sum: 5,
                    total_space_functions: 1,
                    exit_min: 5,
                    exit_max: 5,
                },
                cognitive: Stats {
                    structural: 7,
                    structural_sum: 7,
                    structural_min: 7,
                    structural_max: 7,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: Some(
                            349,
                        ),
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 11.0,
                    cyclomatic: 11.0,
                    n: 1,
                    cyclomatic_max: 11.0,
                    cyclomatic_min: 11.0,
                },
                halstead: Stats {
                    u_operators: 23,
                    operators: 119,
                    u_operands: 39,
                    operands: 89,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 13,
                        end: 50,
                        unit: false,
                        sloc_min: 38,
                        sloc_max: 38,
                    },
                    ploc: Ploc {
                        lines: {
                            49,
                            43,
                            40,
                            37,
                            34,
                            28,
                            25,
                            22,
                            19,
                            16,
                            13,
                            50,
                            47,
                            41,
                            38,
                            35,
                            32,
                            29,
                            26,
                            23,
                            17,
                            14,
                            45,
                            33,
                            30,
                            24,
                            21,
                            18,
                            15,
                        },
                        ploc_min: 29,
                        ploc_max: 29,
                    },
                    cloc: Cloc {
                        only_comment_lines: 0,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 24,
                        lloc_min: 24,
                        lloc_max: 24,
                    },
                    space_count: 1,
                    blank_min: 9,
                    blank_max: 9,
                },
                nom: Stats {
                    functions: 1,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 1,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 1,
                },
                mi: Stats {
                    halstead_length: 208.0,
                    halstead_vocabulary: 62.0,
                    halstead_volume: 1238.47283256047,
                    cyclomatic: 11.0,
                    sloc: 38.0,
                    comments_percentage: 0.0,
                },
                abc: Stats {
                    assignments: 0.0,
                    assignments_sum: 0.0,
                    assignments_min: 0.0,
                    assignments_max: 0.0,
                    branches: 0.0,
                    branches_sum: 0.0,
                    branches_min: 0.0,
                    branches_max: 0.0,
                    conditions: 0.0,
                    conditions_sum: 0.0,
                    conditions_min: 0.0,
                    conditions_max: 0.0,
                    space_count: 1,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.0,
                    class_wmc: 0.0,
                    interface_wmc: 0.0,
                    class_wmc_sum: 0.0,
                    interface_wmc_sum: 0.0,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: false,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: false,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 2,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 2,
            closure_nargs_max: 0,
            total_functions: 1,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 5,
            total_space_functions: 1,
            exit_min: 0,
            exit_max: 5,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 7,
            structural_min: 0,
            structural_max: 7,
            nesting: 0,
            total_space_functions: 1,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 12.0,
            cyclomatic: 1.0,
            n: 2,
            cyclomatic_max: 11.0,
            cyclomatic_min: 1.0,
        },
        halstead: Stats {
            u_operators: 23,
            operators: 123,
            u_operands: 42,
            operands: 93,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 51,
                unit: true,
                sloc_min: 38,
                sloc_max: 38,
            },
            ploc: Ploc {
                lines: {
                    49,
                    43,
                    40,
                    37,
                    34,
                    28,
                    25,
                    22,
                    19,
                    16,
                    13,
                    4,
                    50,
                    47,
                    41,
                    38,
                    35,
                    32,
                    29,
                    26,
                    23,
                    17,
                    14,
                    11,
                    8,
                    5,
                    45,
                    33,
                    30,
                    24,
                    21,
                    18,
                    15,
                    9,
                    6,
                    3,
                },
                ploc_min: 29,
                ploc_max: 29,
            },
            cloc: Cloc {
                only_comment_lines: 2,
                code_comment_lines: 0,
                comment_line_end: Some(
                    1,
                ),
                cloc_min: 0,
                cloc_max: 0,
            },
            lloc: Lloc {
                logical_lines: 25,
                lloc_min: 24,
                lloc_max: 24,
            },
            space_count: 2,
            blank_min: 9,
            blank_max: 9,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 2,
        },
        mi: Stats {
            halstead_length: 216.0,
            halstead_vocabulary: 65.0,
            halstead_volume: 1300.831447614146,
            cyclomatic: 12.0,
            sloc: 51.0,
            comments_percentage: 0.0392156862745098,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 2,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
